# checksit

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  RATIONALE.md  README.md  cli_tests.txt  make_specs.py  pyproject.toml  requirements.txt  requirements_dev.txt  run-cli-tests.sh  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
checksit/: __init__.py  check.py  cli.py  config.py  cvs.py  describer.py  generic.py  make_specs.py  specs.py  summary.py  utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
scripts/: get-first-files.sh
template-cache/: amofv2-base.yml  beta_rcp85_land-rcm_eur_12km_01_mon_198012-208011.cdl  cltAnom_rcp85_land-prob_uk_25km_cdf_b6190_30y_mon_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_cdf_b6190_30y_seas_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_cdf_b8100_1y_ann_19601201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_cdf_b8100_1y_mon_19601201-19611130.cdl  cltAnom_rcp85_land-prob_uk_25km_cdf_b8100_20y_ann_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_cdf_b8100_20y_seas_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_cdf_b8110_30y_seas_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_pdf_b6190_30y_ann_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_pdf_b8100_1y_ann_19601201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_pdf_b8100_1y_seas_19601201-19611130.cdl  cltAnom_rcp85_land-prob_uk_25km_pdf_b8100_20y_ann_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_pdf_b8100_20y_seas_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_pdf_b8110_30y_mon_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_sample_b6190_30y_ann_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_sample_b6190_30y_seas_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_sample_b8100_1y_seas_19601201-19611130.cdl  cltAnom_rcp85_land-prob_uk_25km_sample_b8100_20y_mon_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_sample_b8100_20y_seas_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_25km_sample_b8110_30y_ann_20091201-20991130.cdl  cltAnom_rcp85_land-prob_uk_country_cdf_b6190_30y_mon_20091201-20991130.cdl  (+1754 more)
tests/: __init__.py  common.py  test_cli.py  (+11 more)
(+2577 files in other folders)
